# django-datachoices

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: verify-upstream.sh
.github/workflows/: linting.yml  main.yml  release.yml  test.yml  tests.yml
src/datachoices/: __init__.py  fields.py
tests/: manage.py  settings.py
tests/testapp/: admin.py  apps.py  choices.py  models.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/tests/: test_fields.py
tests/testapp/tests/choices/: base.py  test_class_instances.py  test_classes.py  test_dataclasses.py  test_dicts.py
tests/testapp/tests/fields/: test_data_choice_array_field.py  test_data_choice_field.py
