[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-datachoices"
description = "A lightweight utility for Django that extends field choices to support complex data types."
version = "0.0.1b"
authors = [
  { name="blu14x" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/blu14x/django-datachoices"
Issues = "https://github.com/blu14x/django-datachoices/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = ["--tb=short", "--cov-branch", "--cov=src", "--cov-report=xml"]