[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-datachoices"
description = "A lightweight utility for Django that extends field choices to support complex data types."
version = "0.0.1b"
authors = [
  { name="blu14x" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/blu14x/django-datachoices"
Issues = "https://github.com/blu14x/django-datachoices/issues"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff.lint]
select = [
    # Enabled by default
    "E4",
    "E7",
    "E9",
    "F",
    "UP", # Pyupgrade
    "I", # Isort
    "C90", # Mccabe (complexity check)
    "DJ", # Flake8 django extension
    "INT", # Flake8 gettext extension
    "RET", # Flake8 return extension
    "T20", # Flake8 print extension
    "S", # Flake8 bandit extension
    "C4", # Flake8 comprehension extension
    "LOG", # Flake8 logging extension
    "BLE", # Flake8 blind except extension
    "ERA", # Eradicate (commented out code)
    "D", # Pydocstyle
    "RUF", # Ruff extra rules
]

ignore = [
    "D100", # undocumented public module
    "D104", # undocumented public package
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
    "D203", # 1 blank line required before class docstring (we prefer D211)
    "D213", # Multi-line docstring summary should start at the second line (we prefer D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D10",
    "S105", # https://docs.astral.sh/ruff/rules/hardcoded-password-string/
]
"tests/**/migrations/*.py" = [
    "D",
    "RUF",
    "S",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
    "tests",
]